--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,7 @@ fastapi==0.75.1
 numpy==1.22.3
 pandas==1.3.4
 tensorflow==2.8.0
+uvicorn==0.17.6
+python-multipart==0.0.5
+Pillow==8.4.0
+scipy==1.7.1
